--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+input{
+  margin-bottom: 5px;
+}
+
+.btn{
+  margin-bottom: 5px;
+}
+.row{
+  margin: 0px;
+}
+.body{
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+.wdv-toolbar{
+  position: absolute;
+  right: 2px;
+  background-color: lightgrey;
+  padding: 3px;
+  border-bottom-left-radius: 9px;
+  opacity: 0.7;
+}
