--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -4,7 +4,7 @@
 
     <!--back mark-->
     <p class="navbar-text pull-left">
-      <a href="widget-list.html" class="navbar-link">
+      <a [routerLink]="['/user/',userId,'website',webId,'page',pageId,'widget','new']" class="navbar-link">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
     </p>
@@ -18,7 +18,8 @@
 
     <!--tick mark-->
     <p class="navbar-text pull-right">
-      <a href="widget-list.html" class="navbar-link">
+      <a (click)="createWidget()"
+        [routerLink]="['/user/',userId,'website',webId,'page',pageId,'widget']" class="navbar-link">
         <span class="glyphicon glyphicon-ok"></span>
       </a>
     </p>
@@ -36,17 +37,20 @@
 
     <div class="form-group">
       <label for="text">Text</label>
-      <input type="text" class="form-control" id="text" placeholder="info about image">
+      <input [(ngModel)]='text' name="text"
+        type="text" class="form-control" id="text" placeholder="info about image">
     </div>
 
     <div class="form-group">
       <label for="url">URL</label>
-      <input type="text" class="form-control" id="url" placeholder="https://www.google.com">
+      <input [(ngModel)]='url' name="url"
+        type="text" class="form-control" id="url" placeholder="https://www.google.com">
     </div>
 
     <div class="form-group">
       <label for="width">Width</label>
-      <input type="text" class="form-control" id="width" placeholder="100%">
+      <input [(ngModel)]='width' name="width"
+        type="text" class="form-control" id="width" placeholder="100%">
     </div>
 
     <div class="form-group">
@@ -54,9 +58,9 @@
       <input type="file" id="exampleInputFile" class="form-control">
     </div>
     <a class="btn btn-primary btn-block"
-       href="#">Upload Image</a>
-    <a class="btn btn-danger btn-block "
-       href="widget-list.html" >Delete</a>
+       [routerLink]="[]">Upload Image</a>
+    <a class="btn btn-danger btn-block " (click)="deleteWidget()"
+       [routerLink]="['/user/',userId,'website',webId,'page',pageId,'widget']"  >Delete</a>
 
   </form>
 </div>
@@ -65,7 +69,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <p class="navbar-text pull-right">
-      <a href="profile.html">
+      <a [routerLink]="['/user/',userId]">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </p>
