--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -3,7 +3,7 @@
 
     <!--back mark-->
     <p class="navbar-text pull-left">
-      <a href="page-list.html" class="navbar-link">
+      <a [routerLink]="['/user/',userId,'website',webId,'page']" class="navbar-link">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
     </p>
@@ -17,7 +17,7 @@
 
     <!--plus mark-->
     <p class="navbar-text pull-right">
-      <a href="page-list.html" class="navbar-link">
+      <a  (click)="updateWebsite() "[routerLink]="['/user/',userId,'website',webId,'page']" class="navbar-link">
         <span class="glyphicon glyphicon-ok"></span>
       </a>
     </p>
@@ -30,14 +30,16 @@
   <form>
     <div class="form-group">
       <label for="inputName">Name</label>
-      <input type="text" class="form-control" id="inputName" placeholder="Page Name">
+      <input [(ngModel)]="name" name="name"
+        type="text" class="form-control" id="inputName" placeholder="Page Name">
     </div>
 
     <div class="form-group">
       <label for="pageTitle">Title</label>
-      <input type="text" class="form-control" id="pageTitle" placeholder="Page Title">
+      <input [(ngModel)]="desc" name="desc"
+        type="text" class="form-control" id="pageTitle" placeholder="Page Title">
     </div>
-    <a href="page-list.html" class="btn btn-danger btn-block">Delete</a>
+    <a (click)="deleteWebsite()"  [routerLink]="['/user/',userId,'website',webId,'page']" class="btn btn-danger btn-block">Delete</a>
   </form>
 
 </div>
@@ -48,7 +50,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <p class="navbar-text pull-right">
-      <a href="../user/profile.html">
+      <a [routerLink]="['/user/',userId]">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </p>
