--- a/src/app/components/page/page-new/page-new.component.html
+++ b/src/app/components/page/page-new/page-new.component.html
@@ -4,7 +4,7 @@
 
     <!--back mark-->
     <p class="navbar-text pull-left">
-      <a href="page-list.html" class="navbar-link">
+      <a [routerLink]="['/user/',userId,'website',webId,'page']" class="navbar-link">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
     </p>
@@ -18,7 +18,7 @@
 
     <!--plus mark-->
     <p class="navbar-text pull-right">
-      <a (click)="createPage()"[routerLink]="['/user/',userId,'website',webId]" class="navbar-link">
+      <a (click)="createPage()" [routerLink]="['/user/',userId,'website',webId,'page']" class="navbar-link">
         <span class="glyphicon glyphicon-ok"></span>
       </a>
     </p>
@@ -48,7 +48,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <p class="navbar-text pull-right">
-      <a href="../user/profile.html">
+      <a [routerLink]="['/user/',userId]">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </p>
