--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -4,7 +4,7 @@
 
     <!--back mark-->
     <p class="navbar-text pull-left">
-      <a href="widget-list.html" class="navbar-link">
+      <a [routerLink]="['/user/',userId,'website',webId,'page',pageId,'widget']" class="navbar-link">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
     </p>
@@ -24,9 +24,12 @@
 
 <div class="body container-fluid">
   <ul class="list-group">
-    <li class="list-group-item"><a href="widget-heading.html"><b>Header</b></a> </li>
-    <li class="list-group-item"><a href="widget-image.html"><b>Image</b></a> </li>
-    <li class="list-group-item"><a href="widget-youtube.html"><b>YouTube</b></a> </li>
+    <li class="list-group-item">
+      <a [routerLink]="['/user/',userId,'website',webId,'page',pageId,'widget','new','heading']"><b>Header</b></a> </li>
+    <li class="list-group-item">
+      <a [routerLink]="['/user/',userId,'website',webId,'page',pageId,'widget','new','image']"><b>Image</b></a> </li>
+    <li class="list-group-item">
+      <a [routerLink]="['/user/',userId,'website',webId,'page',pageId,'widget','new','youtube']"><b>YouTube</b></a> </li>
   </ul>
 </div>
 
@@ -35,7 +38,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <p class="navbar-text pull-right">
-      <a href="../user/profile.html">
+      <a [routerLink]="['/user/',userId]">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </p>
