--- a/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
+++ b/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <!--back mark-->
     <p class="navbar-text pull-left">
-      <a href="widget-list.html" class="navbar-link">
+      <a [routerLink]="['/user/',userId,'website',webId,'page',pageId,'widget','new']" class="navbar-link">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
     </p>
@@ -17,7 +17,8 @@
 
     <!--tick mark-->
     <p class="navbar-text pull-right">
-      <a href="widget-list.html" class="navbar-link">
+      <a (click)="createWidget()"
+        [routerLink]="['/user/',userId,'website',webId,'page',pageId,'widget']" class="navbar-link">
         <span class="glyphicon glyphicon-ok"></span>
       </a>
     </p>
@@ -35,22 +36,25 @@
 
     <div class="form-group">
       <label for="text">Text</label>
-      <input type="text" class="form-control" id="text" placeholder="info about image">
+      <input [(ngModel)]='text' name="text"
+        type="text" class="form-control" id="text" placeholder="info about image">
     </div>
 
     <div class="form-group">
       <label for="url">URL</label>
-      <input type="text" class="form-control" id="url" placeholder="https://www.youtube.com">
+      <input [(ngModel)]='url' name="url"
+        type="text" class="form-control" id="url" placeholder="https://www.youtube.com">
     </div>
 
     <div class="form-group">
       <label for="width">Width</label>
-      <input type="text" class="form-control" id="width" placeholder="100%">
+      <input [(ngModel)]='width' name="width"
+        type="text" class="form-control" id="width" placeholder="100%">
     </div>
 
 
-    <a class="btn btn-danger btn-block "
-       href="widget-list.html" >Delete</a>
+    <a class="btn btn-danger btn-block " (click)="deleteWidget()"
+       [routerLink]="['/user/',userId,'website',webId,'page',pageId,'widget']" >Delete</a>
 
   </form>
 </div>
@@ -59,7 +63,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <p class="navbar-text pull-right">
-      <a href="../user/profile.html">
+      <a [routerLink]="['/user/',userId]">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </p>
