--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -50,11 +50,11 @@
         </div>
 
         <div *ngSwitchCase="'YOUTUBE'">
-          <iframe width="100%" height="315" [src]="sanitize(widget.url)"></iframe>
+          <iframe [style.width]="widget.width+'%'" height="315" [src]="sanitize(widget.url)"></iframe>
         </div>
 
         <div *ngSwitchCase="'IMAGE'">
-          <img width="100%" height="300"
+          <img [style.width]="widget.width+'%'" height="300"
                [src]="sanitize(widget.url)">
         </div>
 
