--- a/src/app/components/widget/widget-edit/widget-edit.component.html
+++ b/src/app/components/widget/widget-edit/widget-edit.component.html
@@ -1,4 +1,4 @@
-<div [ngSwitch]="widget.widgetType">
+<div *ngIf="isDataAvailable" [ngSwitch]="widget.widgetType">
 
   <div *ngSwitchCase="'HEADING'">
     <app-widget-header></app-widget-header>
