--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -18,8 +18,7 @@
 
     <!--tick mark-->
     <p class="navbar-text pull-right">
-      <a (click)="createWidget()"
-        [routerLink]="['/user/',userId,'website',webId,'page',pageId,'widget']" class="navbar-link">
+      <a (click)="createWidget()" class="navbar-link">
         <span class="glyphicon glyphicon-ok"></span>
       </a>
     </p>
@@ -59,8 +58,7 @@
     </div>
     <a class="btn btn-primary btn-block"
        [routerLink]="[]">Upload Image</a>
-    <a class="btn btn-danger btn-block " (click)="deleteWidget()"
-       [routerLink]="['/user/',userId,'website',webId,'page',pageId,'widget']"  >Delete</a>
+    <a class="btn btn-danger btn-block " (click)="deleteWidget()">Delete</a>
 
   </form>
 </div>
