--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -17,7 +17,7 @@
 
     <!--plus mark-->
     <p class="navbar-text pull-right">
-      <a  (click)="updateWebsite() "[routerLink]="['/user/',userId,'website',webId,'page']" class="navbar-link">
+      <a  (click)="updateWebsite()" class="navbar-link">
         <span class="glyphicon glyphicon-ok"></span>
       </a>
     </p>
@@ -39,7 +39,7 @@
       <input [(ngModel)]="desc" name="desc"
         type="text" class="form-control" id="pageTitle" placeholder="Page Title">
     </div>
-    <a (click)="deleteWebsite()"  [routerLink]="['/user/',userId,'website',webId,'page']" class="btn btn-danger btn-block">Delete</a>
+    <a (click)="deleteWebsite()"   class="btn btn-danger btn-block">Delete</a>
   </form>
 
 </div>
