--- a/src/app/components/page/page-new/page-new.component.html
+++ b/src/app/components/page/page-new/page-new.component.html
@@ -18,7 +18,7 @@
 
     <!--plus mark-->
     <p class="navbar-text pull-right">
-      <a (click)="createPage()" [routerLink]="['/user/',userId,'website',webId,'page']" class="navbar-link">
+      <a (click)="createPage()" class="navbar-link">
         <span class="glyphicon glyphicon-ok"></span>
       </a>
     </p>
