--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -10,7 +10,7 @@
 
     <!--tick mark-->
     <p class="navbar-text pull-right">
-      <a (click)="update()" [routerLink]="['/user/',userId]" class="navbar-link">
+      <a (click)="update()"  class="navbar-link">
         <span class="glyphicon glyphicon-ok"></span>
       </a>
     </p>
@@ -18,7 +18,7 @@
   </div>
 </nav>
 
-<div class="body container-fluid">
+<div class="body container-fluid" *ngIf="isDataAvailable">
   <form>
     <div class="form-group">
       <label for="username">Username</label>
