--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,8 +15,9 @@
     <a href="test">Test MongoDB</a>
   </h4>
 
+
   <h4>
-    <a href="assets">Assignment</a>
+    <a href="login">Assignment4</a>
   </h4>
 
 </div>
