--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -29,7 +29,7 @@
 
 <!-- Main content of the body-->
 
-<div appSortable="chan()" class="body container-fluid">
+<div appSortable class="body container-fluid">
 
 
 
