--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -28,7 +28,8 @@
 
 
 <div class="body container-fluid">
-  <form ngNoForm action={{baseURL}}/api/uploads" method="post" enctype="multipart/form-data">
+  <form ngNoForm action="{{baseURL}}/api/uploads" method="post" enctype="multipart/form-data">
+
     <div class="form-group">
       <label for="name">Name</label>
       <input type="text" class="form-control" id="name" placeholder="name">
