--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -30,6 +30,12 @@
       <a [routerLink]="['/user/',userId,'website',webId,'page',pageId,'widget','new','image']"><b>Image</b></a> </li>
     <li class="list-group-item">
       <a [routerLink]="['/user/',userId,'website',webId,'page',pageId,'widget','new','youtube']"><b>YouTube</b></a> </li>
+    <li class="list-group-item">
+      <a [routerLink]="['/user/',userId,'website',webId,'page',pageId,'widget','new','html']"><b>Html</b></a> </li>
+    <li class="list-group-item">
+      <a [routerLink]="['/user/',userId,'website',webId,'page',pageId,'widget','new','text']"><b>Text</b></a> </li>
+
+
   </ul>
 </div>
 
