--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -50,7 +50,7 @@
           <h1> {{widget.text}}</h1>
         </div>
 
-        <div  *ngSwitchCase="'YOUTUBE'">
+        <div  *ngSwitchCase="'YOUTUBE'" class="youtube-widget">
           <iframe [style.width]="widget.width+'%'" height="315" [src]="sanitize(widget.url)"></iframe>
         </div>
 
@@ -60,10 +60,25 @@
         </div>
 
         <div  *ngSwitchCase="'HTML'">
-          <p> {{widget.text}}</p>
+            <div innerHTML="{{widget.text}}"></div>
         </div>
 
-    </div>
+          <div *ngSwitchCase="'TEXT'">
+           
+            <div *ngIf="widget.formatted">
+              <quill-editor [(ngModel)]="widget.text" name="text"></quill-editor>
+            </div>
+            <input *ngIf="!widget.formatted && (!widget.rows || widget.rows===1)"
+                   placeholder="{{widget.placeholder}}" class="form-control"/>
+
+            <textarea *ngIf="!widget.formatted && (widget.rows > 1)"
+             rows="{{widget.rows}}" placeholder="{{widget.placeholder}}"
+            class="form-control">{{widget.text}}</textarea>
+          </div>
+
+
+
+        </div>
 
 
   </div>
