--- a/src/app/components/widget/widget-edit/widget-image/flickr-image-search/flickr-image-search.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/flickr-image-search/flickr-image-search.component.html
@@ -30,6 +30,17 @@
       </span>
   </div>
 
+  <div class="row">
+    <div *ngFor = "let pic of photos['photo']"
+         class="col-xs-4">
+      <img    (click)="selectPhoto(pic)"
+              width="100%"
+              [src] = "['https://farm' + pic.farm + '.staticflickr.com/' + pic.server + '/' +   pic.id + '_' + pic.secret + '_s.jpg']"/>
+
+      <p></p>
+    </div>
+  </div>
+
 
 </div>
 
