--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -18,7 +18,7 @@
   </div>
 </nav>
 
-<div class="body container-fluid" *ngIf="isDataAvailable">
+<div class="body container-fluid">
   <form>
     <div class="form-group">
       <label for="username">Username</label>
@@ -45,9 +45,9 @@
     </div>
 
     <a class="btn btn-primary btn-block"
-       [routerLink]="['/user/',userId,'website']">Websites</a>
+       [routerLink]="['/user/',user._id,'website']">Websites</a>
     <a class="btn btn-danger btn-block "
-       [routerLink]="['/login']" >Logout</a>
+      (click)="logout()" >Logout</a>
 
   </form>
 
@@ -57,7 +57,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <p class="navbar-text pull-right">
-      <a [routerLink]="['/user/',userId]">
+      <a [routerLink]="['/user/',user._id]">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </p>
