--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -36,6 +36,9 @@
 
 
   </form>
+  <a href="{{baseURL}}/facebook/login" class="btn btn-primary btn-block">
+    <span class ="fa fa-facebook"></span>Facebook
+  </a>
 
   <button [routerLink]="['/register']"class="btn btn-success btn-block">Register</button>
 
