--- a/src/app/components/page/page-new/page-new.component.html
+++ b/src/app/components/page/page-new/page-new.component.html
@@ -30,7 +30,7 @@
 
   <div class="form-group">
     <label for="inputName">Name</label>
-    <input [(ngModel)]='name'
+    <input [(ngModel)]='name' required
       type="text" class="form-control" id="inputName" placeholder="Page Name">
   </div>
 
