--- a/src/app/components/widget/widget-edit/widget-text/widget-text.component.html
+++ b/src/app/components/widget/widget-edit/widget-text/widget-text.component.html
@@ -40,6 +40,7 @@
              class="form-control"
              id="Name"
              name="name"
+             required
              placeholder="Name">
     </div>
 
