--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -30,7 +30,7 @@
   <form>
     <div class="form-group">
       <label for="inputName">Name</label>
-      <input [(ngModel)]="name" name="name"
+      <input [(ngModel)]="name" name="name" required minlength="1"
         type="text" class="form-control" id="inputName" placeholder="Page Name">
     </div>
 
