--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -62,8 +62,8 @@
     <form>
       <div class="form-group">
         <label for="inputName">Name</label>
-        <input [(ngModel)]='name' name ="name"
-               type="text" class="form-control" id="inputName" placeholder="Blogger">
+        <input [(ngModel)]='name' name ="name" required minlength="1"
+               type="text" class="form-control"  id="inputName" placeholder="Blogger">
       </div>
 
       <div class="form-group">
