--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -32,7 +32,7 @@
 
     <div class="form-group">
       <label for="name">Name</label>
-      <input type="text" class="form-control" id="name" placeholder="name">
+      <input type="text" class="form-control"  required id="name" placeholder="name">
     </div>
 
     <div class="form-group">
