--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="container">
 
   <h1>
-    Angular 4 MEAN stack app
+    Course : Web Development
   </h1>
 
 
@@ -17,8 +17,22 @@
 
 
   <h4>
-    <a href="login">Assignment5</a>
+    <a href="login">Assignment</a>
   </h4>
+
+  <h4>
+    <a href="https://github.com/tanwar4/webdev-anwar-tariq">Assignment Github </a>
+  </h4>
+
+
+  <h4>
+    <a href="https://trips-diaries.herokuapp.com/">Final Project </a>
+  </h4>
+
+  <h4>
+    <a href="https://github.com/tanwar4/TripMemories">Project Github </a>
+  </h4>
+
 
 </div>
 
